--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="author" content="Hamed Mehranfar">
 <meta name="author" content="Jushu An">
 
-<title>FS24 Bachelor theses @IM - Estimation of financial needs and condition of infrastructure objects</title>
+<title>&nbsp;&nbsp;&nbsp;FS24 Bachelor theses @IM - Estimation of financial needs and condition of infrastructure objects</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -34,8 +34,6 @@ ul.task-list li input[type="checkbox"] {
 <meta name="quarto:offset" content="./">
 <script src="site_libs/quarto-listing/list.min.js"></script>
 <script src="site_libs/quarto-listing/quarto-listing.js"></script>
-<script src="site_libs/cookie-consent/cookie-consent.js"></script>
-<link href="site_libs/cookie-consent/cookie-consent.css" rel="stylesheet">
 <script src="site_libs/quarto-html/quarto.js"></script>
 <script src="site_libs/quarto-html/popper.min.js"></script>
 <script src="site_libs/quarto-html/tippy.umd.min.js"></script>
@@ -103,24 +101,6 @@ ul.task-list li input[type="checkbox"] {
     }
   })
   </script>
-
-<script type="text/javascript" charset="UTF-8">
-document.addEventListener('DOMContentLoaded', function () {
-cookieconsent.run({
-  "notice_banner_type":"simple",
-  "consent_type":"implied",
-  "palette":"light",
-  "language":"en",
-  "page_load_consent_levels":["strictly-necessary","functionality","tracking","targeting"],
-  "notice_banner_reject_button_hide":false,
-  "preferences_center_close_button_hide":false,
-  "website_name":""
-  ,
-"language":"en"
-  });
-});
-</script> 
-  
 <script src="site_libs/quarto-diagram/mermaid.min.js"></script>
 <script src="site_libs/quarto-diagram/mermaid-init.js"></script>
 <link href="site_libs/quarto-diagram/mermaid.css" rel="stylesheet">
@@ -168,7 +148,7 @@ window.Quarto = {
     <img src="./posts/defineObjectives/Logos.svg" alt="" class="navbar-logo">
     </a>
     <a class="navbar-brand" href="./index.html">
-    <span class="navbar-title">FS24 Bachelor theses <span class="citation" data-cites="IM">@IM</span></span>
+    <span class="navbar-title">&nbsp;&nbsp;&nbsp;FS24 Bachelor theses <span class="citation" data-cites="IM">@IM</span></span>
     </a>
   </div>
             <div id="quarto-search" class="" title="Search"></div>
@@ -233,7 +213,7 @@ window.Quarto = {
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(1)</span></div><div class="category" data-category="task1">task1 <span class="quarto-category-count">(1)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(1)</span></div><div class="category" data-category="Week2">Week2 <span class="quarto-category-count">(1)</span></div></div></div>
 <!-- main -->
 <main class="content quarto-banner-title-block column-page-left" id="quarto-document-content">
 
@@ -250,13 +230,14 @@ window.Quarto = {
 <li><p>Develop models for the condition of individual objects, as well as how they change over time, and</p></li>
 <li><p>Develop and evaluate interventions for infrastructure networks considering data uncertainty.</p></li>
 </ul>
-<p>Here we upload the slides related to each weekly meeting according to the following timeline:</p>
+<p>Here we upload the slides related to each weekly meeting according to the <a href="#fig-1" class="quarto-xref">Figure&nbsp;1</a>.</p>
 <div class="cell" data-layout-align="default">
 <div class="cell-output-display">
+<div id="fig-1" class="quarto-figure quarto-figure-center quarto-float anchored">
+<figure class="quarto-float quarto-float-fig figure">
+<div aria-describedby="fig-1-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <div>
-<p></p><figure class="figure"><p></p>
-<div>
-<pre class="mermaid mermaid-js">gantt
+<pre class="mermaid mermaid-js" data-label="fig-1">gantt
     title Thesis timeline
     dateFormat  YYYY-MM-DD
     section Initialisation
@@ -279,10 +260,15 @@ window.Quarto = {
     
 </pre>
 </div>
-<p></p></figure><p></p>
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-1-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Figure&nbsp;1: The timeline for accomplishing the thesis.
+</figcaption>
+</figure>
 </div>
 </div>
 </div>
+<hr><p class="“break-label”;" style="font-size=14">Topics</p> 
 
 
 
@@ -290,7 +276,7 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="task1" data-listing-date-sort="1709506800000" data-listing-file-modified-sort="1709025875434" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="7">
+<div class="quarto-post image-right" data-index="0" data-categories="Week2" data-listing-date-sort="1709506800000" data-listing-file-modified-sort="1709045128118" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="6" data-listing-word-count-sort="1088">
 <div class="thumbnail">
 <p><a href="./posts/defineObjectives/index.html" class="no-external"></a></p><a href="./posts/defineObjectives/index.html" class="no-external">
 <p><img src="./posts/defineObjectives/thumbnail.png" class="thumbnail-image"></p>
@@ -304,8 +290,8 @@ window.Quarto = {
 <a href="./posts/defineObjectives/index.html" class="no-external">Estimation of financial needs and condition of infrastructure assets</a>
 </div>
 <div class="listing-categories">
-<div class="listing-category" onclick="window.quartoListingCategory('task1'); return false;">
-task1
+<div class="listing-category" onclick="window.quartoListingCategory('Week2'); return false;">
+Week2
 </div>
 </div>
 <div class="listing-description">
@@ -318,7 +304,7 @@ task1
 Mar 4, 2024
 </div>
 <div class="listing-author">
-Hamed Mehranfar, Jushu An
+<strong>Hamed Mehranfar</strong>, Jushu An
 </div>
 </a>
 </div>
@@ -860,19 +846,6 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
 });
 </script>
 </div> <!-- /content -->
-<footer class="footer">
-  <div class="nav-footer">
-    <div class="nav-footer-left">
-      &nbsp;
-    </div>   
-    <div class="nav-footer-center">
-
-<div class="cookie-consent-footer"><a href="#" id="open_preferences_center">Cookie Preferences</a></div></div>
-    <div class="nav-footer-right">
-      &nbsp;
-    </div>
-  </div>
-</footer>
 
 
 
