--- a/index.html
+++ b/index.html
@@ -244,10 +244,10 @@ window.Quarto = {
     Kick-off meeting : milestone, a1, 2024-02-26, 1d
     
     section Work in progress
-    Determine objective functions and classify assets :after a1, 7d
-    Define condition classes and model deterioration : 7d
-    Determine possible interventions &amp; strategies : 14d
-    Estimate cost of interventions and their impacts : 14d
+    Determine objective functions and classify assets :done a1, 2024-03-05,5d
+    Define condition classes and model deterioration : 6d
+    Determine possible interventions &amp; strategies : 12d
+    Estimate cost of interventions and their impacts : 12d
     Interim presentation :crit, 2024-04-08, 1d
     Determine optimal interventioin strategy : 14d
     Develop intervention program : 21d
@@ -276,7 +276,7 @@ Figure&nbsp;1: The timeline for accomplishing the thesis.
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="Week2" data-listing-date-sort="1709506800000" data-listing-file-modified-sort="1709045128118" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="6" data-listing-word-count-sort="1088">
+<div class="quarto-post image-right" data-index="0" data-categories="Week2" data-listing-date-sort="1709593200000" data-listing-file-modified-sort="1709114442188" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="6" data-listing-word-count-sort="1111">
 <div class="thumbnail">
 <p><a href="./posts/defineObjectives/index.html" class="no-external"></a></p><a href="./posts/defineObjectives/index.html" class="no-external">
 <p><img src="./posts/defineObjectives/thumbnail.png" class="thumbnail-image"></p>
@@ -301,7 +301,7 @@ Week2
 <div class="metadata">
 <a href="./posts/defineObjectives/index.html" class="no-external">
 <div class="listing-date">
-Mar 4, 2024
+Mar 5, 2024
 </div>
 <div class="listing-author">
 <strong>Hamed Mehranfar</strong>, Jushu An
