--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Hamed Mehranfar">
-<meta name="author" content="Jushu An">
+<meta name="author" content="Yushu An">
 
 <title>&nbsp;&nbsp;&nbsp;FS24 Bachelor theses @IM - Estimation of financial needs and condition of infrastructure objects</title>
 <style>
@@ -191,7 +191,7 @@ window.Quarto = {
             </p>
         </div>
       <div class="quarto-title-meta-contents">
-      <p class="author">Jushu An <a href="mailto:an@ibi.baug.ethz.ch" class="quarto-title-author-email"><i class="bi bi-envelope"></i></a> </p>
+      <p class="author">Yushu An <a href="mailto:an@ibi.baug.ethz.ch" class="quarto-title-author-email"><i class="bi bi-envelope"></i></a> </p>
     </div>
     <div class="quarto-title-meta-contents">
           <p class="affiliation">
@@ -276,18 +276,18 @@ Figure&nbsp;1: The timeline for accomplishing the thesis.
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="Week2" data-listing-date-sort="1709593200000" data-listing-file-modified-sort="1709537695037" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="9" data-listing-word-count-sort="1644">
+<div class="quarto-post image-right" data-index="0" data-categories="Week2" data-listing-date-sort="1709593200000" data-listing-file-modified-sort="1709551823349" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="9" data-listing-word-count-sort="1646">
 <div class="thumbnail">
-<p><a href="./posts/defineObjectives/index.html" class="no-external"></a></p><a href="./posts/defineObjectives/index.html" class="no-external">
-<p><img src="./posts/defineObjectives/thumbnail.png" class="thumbnail-image"></p>
-</a><p><a href="./posts/defineObjectives/index.html" class="no-external"></a></p>
+<p><a href="./posts/01_defineObjectives/index.html" class="no-external"></a></p><a href="./posts/01_defineObjectives/index.html" class="no-external">
+<p><img src="./posts/01_defineObjectives/thumbnail.png" class="thumbnail-image"></p>
+</a><p><a href="./posts/01_defineObjectives/index.html" class="no-external"></a></p>
 </div>
 <div class="body">
 <h3 class="no-anchor listing-title">
-<a href="./posts/defineObjectives/index.html" class="no-external">Determine objective function and classify assets</a>
+<a href="./posts/01_defineObjectives/index.html" class="no-external">Determine objective function and classify assets</a>
 </h3>
 <div class="listing-subtitle">
-<a href="./posts/defineObjectives/index.html" class="no-external">Estimation of financial needs and condition of infrastructure assets</a>
+<a href="./posts/01_defineObjectives/index.html" class="no-external">Estimation of financial needs and condition of infrastructure assets</a>
 </div>
 <div class="listing-categories">
 <div class="listing-category" onclick="window.quartoListingCategory('Week2'); return false;">
@@ -295,16 +295,16 @@ Week2
 </div>
 </div>
 <div class="listing-description">
-<a href="./posts/defineObjectives/index.html" class="no-external"></a>
+<a href="./posts/01_defineObjectives/index.html" class="no-external"></a>
 </div>
 </div>
 <div class="metadata">
-<a href="./posts/defineObjectives/index.html" class="no-external">
+<a href="./posts/01_defineObjectives/index.html" class="no-external">
 <div class="listing-date">
 Mar 5, 2024
 </div>
 <div class="listing-author">
-<strong>Hamed Mehranfar</strong>, Jushu An
+<strong>Hamed Mehranfar</strong>, Yushu An
 </div>
 </a>
 </div>
