--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ window.Quarto = {
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(1)</span></div><div class="category" data-category="Week2">Week2 <span class="quarto-category-count">(1)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(2)</span></div><div class="category" data-category="Week2">Week2 <span class="quarto-category-count">(1)</span></div><div class="category" data-category="Week3">Week3 <span class="quarto-category-count">(1)</span></div></div></div>
 <!-- main -->
 <main class="content quarto-banner-title-block column-page-left" id="quarto-document-content">
 
@@ -276,7 +276,40 @@ Figure&nbsp;1: The timeline for accomplishing the thesis.
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="Week2" data-listing-date-sort="1709593200000" data-listing-file-modified-sort="1709640685712" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="9" data-listing-word-count-sort="1646">
+<div class="quarto-post image-right" data-index="0" data-categories="Week3" data-listing-date-sort="1710111600000" data-listing-file-modified-sort="1709914840225" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="25" data-listing-word-count-sort="4974">
+<div class="thumbnail">
+<p><a href="./posts/02_CSdef&amp;DetModeling/index.html" class="no-external"></a></p><a href="./posts/02_CSdef&amp;DetModeling/index.html" class="no-external">
+<p><img src="./posts/02_CSdef&amp;DetModeling/thumbnail.png" class="thumbnail-image"></p>
+</a><p><a href="./posts/02_CSdef&amp;DetModeling/index.html" class="no-external"></a></p>
+</div>
+<div class="body">
+<h3 class="no-anchor listing-title">
+<a href="./posts/02_CSdef&amp;DetModeling/index.html" class="no-external">Define condition classes and model deterioration</a>
+</h3>
+<div class="listing-subtitle">
+<a href="./posts/02_CSdef&amp;DetModeling/index.html" class="no-external">Estimation of financial needs and condition of infrastructure assets</a>
+</div>
+<div class="listing-categories">
+<div class="listing-category" onclick="window.quartoListingCategory('Week3'); return false;">
+Week3
+</div>
+</div>
+<div class="listing-description">
+<a href="./posts/02_CSdef&amp;DetModeling/index.html" class="no-external"></a>
+</div>
+</div>
+<div class="metadata">
+<a href="./posts/02_CSdef&amp;DetModeling/index.html" class="no-external">
+<div class="listing-date">
+Mar 11, 2024
+</div>
+<div class="listing-author">
+<strong>Hamed Mehranfar</strong>, Yushu An
+</div>
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="1" data-categories="Week2" data-listing-date-sort="1709593200000" data-listing-file-modified-sort="1709725203406" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="9" data-listing-word-count-sort="1646">
 <div class="thumbnail">
 <p><a href="./posts/01_defineObjectives/index.html" class="no-external"></a></p><a href="./posts/01_defineObjectives/index.html" class="no-external">
 <p><img src="./posts/01_defineObjectives/thumbnail.png" class="thumbnail-image"></p>
@@ -295,7 +328,7 @@ Week2
 </div>
 </div>
 <div class="listing-description">
-<a href="./posts/01_defineObjectives/index.html" class="no-external"></a>
+<a href="./posts/01_defineObjectives/index.html" class="no-external"><strong>The process used to ensure that existing infrastructure (assets and/or networks) provide adequate levels of service for specified periods of time.</strong></a>
 </div>
 </div>
 <div class="metadata">
