--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ Figure&nbsp;1: The timeline for accomplishing the thesis.
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="Week3" data-listing-date-sort="1710111600000" data-listing-file-modified-sort="1710142545133" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="25" data-listing-word-count-sort="4974">
+<div class="quarto-post image-right" data-index="0" data-categories="Week3" data-listing-date-sort="1710111600000" data-listing-file-modified-sort="1710229547217" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="30" data-listing-word-count-sort="5826">
 <div class="thumbnail">
 <p><a href="./posts/02_CSdef&amp;DetModeling/index.html" class="no-external"></a></p><a href="./posts/02_CSdef&amp;DetModeling/index.html" class="no-external">
 <p><img src="./posts/02_CSdef&amp;DetModeling/thumbnail.png" class="thumbnail-image"></p>
@@ -309,7 +309,7 @@ Mar 11, 2024
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="1" data-categories="Week2" data-listing-date-sort="1709593200000" data-listing-file-modified-sort="1709725203406" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="9" data-listing-word-count-sort="1646">
+<div class="quarto-post image-right" data-index="1" data-categories="Week2" data-listing-date-sort="1709593200000" data-listing-file-modified-sort="1710229498932" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="9" data-listing-word-count-sort="1646">
 <div class="thumbnail">
 <p><a href="./posts/01_defineObjectives/index.html" class="no-external"></a></p><a href="./posts/01_defineObjectives/index.html" class="no-external">
 <p><img src="./posts/01_defineObjectives/thumbnail.png" class="thumbnail-image"></p>
@@ -328,7 +328,7 @@ Week2
 </div>
 </div>
 <div class="listing-description">
-<a href="./posts/01_defineObjectives/index.html" class="no-external"><strong>The process used to ensure that existing infrastructure (assets and/or networks) provide adequate levels of service for specified periods of time.</strong></a>
+<a href="./posts/01_defineObjectives/index.html" class="no-external"></a>
 </div>
 </div>
 <div class="metadata">
