--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ window.Quarto = {
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(3)</span></div><div class="category" data-category="Week2">Week2 <span class="quarto-category-count">(1)</span></div><div class="category" data-category="Week3">Week3 <span class="quarto-category-count">(1)</span></div><div class="category" data-category="Week5">Week5 <span class="quarto-category-count">(1)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(4)</span></div><div class="category" data-category="Week2">Week2 <span class="quarto-category-count">(1)</span></div><div class="category" data-category="Week3">Week3 <span class="quarto-category-count">(1)</span></div><div class="category" data-category="Week5">Week5 <span class="quarto-category-count">(1)</span></div><div class="category" data-category="Week8">Week8 <span class="quarto-category-count">(1)</span></div></div></div>
 <!-- main -->
 <main class="content quarto-banner-title-block column-page-left" id="quarto-document-content">
 
@@ -276,7 +276,40 @@ Figure&nbsp;1: The timeline for accomplishing the thesis.
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="Week5" data-listing-date-sort="1711321200000" data-listing-file-modified-sort="1711119420400" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="25" data-listing-word-count-sort="4801">
+<div class="quarto-post image-right" data-index="0" data-categories="Week8" data-listing-date-sort="1713132000000" data-listing-file-modified-sort="1712050877773" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="16" data-listing-word-count-sort="3176">
+<div class="thumbnail">
+<p><a href="./posts/04_OptimStrategies/index.html" class="no-external"></a></p><a href="./posts/04_OptimStrategies/index.html" class="no-external">
+<p><img src="./posts/04_OptimStrategies/thumbnail.png" class="thumbnail-image"></p>
+</a><p><a href="./posts/04_OptimStrategies/index.html" class="no-external"></a></p>
+</div>
+<div class="body">
+<h3 class="no-anchor listing-title">
+<a href="./posts/04_OptimStrategies/index.html" class="no-external">Determine optimal interventions strategies</a>
+</h3>
+<div class="listing-subtitle">
+<a href="./posts/04_OptimStrategies/index.html" class="no-external">Estimation of financial needs and condition of infrastructure assets</a>
+</div>
+<div class="listing-categories">
+<div class="listing-category" onclick="window.quartoListingCategory('Week8'); return false;">
+Week8
+</div>
+</div>
+<div class="listing-description">
+<a href="./posts/04_OptimStrategies/index.html" class="no-external"></a>
+</div>
+</div>
+<div class="metadata">
+<a href="./posts/04_OptimStrategies/index.html" class="no-external">
+<div class="listing-date">
+Apr 15, 2024
+</div>
+<div class="listing-author">
+Hamed Mehranfar, <strong>Yushu An</strong>
+</div>
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="1" data-categories="Week5" data-listing-date-sort="1711321200000" data-listing-file-modified-sort="1711300477968" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="25" data-listing-word-count-sort="4801">
 <div class="thumbnail">
 <p><a href="./posts/03_IntStrategies/index.html" class="no-external"></a></p><a href="./posts/03_IntStrategies/index.html" class="no-external">
 <p><img src="./posts/03_IntStrategies/thumbnail.png" class="thumbnail-image"></p>
@@ -309,7 +342,7 @@ Mar 25, 2024
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="1" data-categories="Week3" data-listing-date-sort="1710111600000" data-listing-file-modified-sort="1710229547217" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="30" data-listing-word-count-sort="5826">
+<div class="quarto-post image-right" data-index="2" data-categories="Week3" data-listing-date-sort="1710111600000" data-listing-file-modified-sort="1710229547217" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="30" data-listing-word-count-sort="5826">
 <div class="thumbnail">
 <p><a href="./posts/02_CSdef&amp;DetModeling/index.html" class="no-external"></a></p><a href="./posts/02_CSdef&amp;DetModeling/index.html" class="no-external">
 <p><img src="./posts/02_CSdef&amp;DetModeling/thumbnail.png" class="thumbnail-image"></p>
@@ -342,7 +375,7 @@ Mar 11, 2024
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="2" data-categories="Week2" data-listing-date-sort="1709593200000" data-listing-file-modified-sort="1710229498932" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="9" data-listing-word-count-sort="1646">
+<div class="quarto-post image-right" data-index="3" data-categories="Week2" data-listing-date-sort="1709593200000" data-listing-file-modified-sort="1710229498932" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="9" data-listing-word-count-sort="1646">
 <div class="thumbnail">
 <p><a href="./posts/01_defineObjectives/index.html" class="no-external"></a></p><a href="./posts/01_defineObjectives/index.html" class="no-external">
 <p><img src="./posts/01_defineObjectives/thumbnail.png" class="thumbnail-image"></p>
