--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ Figure&nbsp;1: The timeline for accomplishing the thesis.
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="Week10" data-listing-date-sort="1714341600000" data-listing-file-modified-sort="1713790202394" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="12" data-listing-word-count-sort="2335">
+<div class="quarto-post image-right" data-index="0" data-categories="Week10" data-listing-date-sort="1714341600000" data-listing-file-modified-sort="1714136535355" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="13" data-listing-word-count-sort="2503">
 <div class="thumbnail">
 <p><a href="./posts/5_IntPrograms/index.html" class="no-external"></a></p><a href="./posts/5_IntPrograms/index.html" class="no-external">
 <p><img src="./posts/5_IntPrograms/thumbnail.png" class="thumbnail-image"></p>
@@ -295,7 +295,7 @@ Week10
 </div>
 </div>
 <div class="listing-description">
-<a href="./posts/5_IntPrograms/index.html" class="no-external">Intervention strategies</a>
+<a href="./posts/5_IntPrograms/index.html" class="no-external"></a>
 </div>
 </div>
 <div class="metadata">
@@ -328,7 +328,7 @@ Week8
 </div>
 </div>
 <div class="listing-description">
-<a href="./posts/04_OptimStrategies/index.html" class="no-external"><br></a>
+<a href="./posts/04_OptimStrategies/index.html" class="no-external"></a>
 </div>
 </div>
 <div class="metadata">
