The last modification/ Final version

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ Week10
 </div>
 </div>
 <div class="listing-description">
-<a href="./posts/5_IntPrograms/index.html" class="no-external">Intervention strategies</a>
+<a href="./posts/5_IntPrograms/index.html" class="no-external"></a>
 </div>
 </div>
 <div class="metadata">
